argocd/manifests/web-poker/base/deployment-mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-poker-mysql
  namespace: web-poker
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: web-poker-mysql
  template:
    metadata:
      labels:
        app: web-poker-mysql
    spec:
      nodeSelector:
        kubernetes.io/os: linux
      containers:
        - name: mysql
          image: mysql:5.7
          ports:
            - name: mysql
              containerPort: 3306
          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql
              subPath: mysql
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "1000m"
          readinessProbe:
            tcpSocket:
              port: 3306
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6
          livenessProbe:
            tcpSocket:
              port: 3306
            initialDelaySeconds: 45
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 6
      volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: web-poker-mysql-pvc-v2
