argocd/manifests/web-poker/base/service-api.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-poker-api
  namespace: web-poker
spec:
  selector:
    app: web-poker-api
  ports:
    - name: http
      port: 8083
      targetPort: 8083
      protocol: TCP
  type: ClusterIP
