argocd/manifests/web-poker/base/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-poker-frontend
  namespace: web-poker
spec:
  selector:
    app: web-poker-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
