argocd/manifests/web-poker/base/service-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-poker-mysql
  namespace: web-poker
spec:
  selector:
    app: web-poker-mysql
  ports:
    - name: mysql
      port: 3306
      targetPort: 3306
      protocol: TCP
  type: ClusterIP
