argocd/manifests/web-poker/base/service-orchestrator.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-poker-orchestrator
  namespace: web-poker
spec:
  selector:
    app: web-poker-orchestrator
  ports:
    - name: http
      port: 8082
      targetPort: 8082
      protocol: TCP
    - name: register
      port: 8045
      targetPort: 8045
      protocol: TCP
  type: ClusterIP
