argocd/manifests/web-poker/base/service-room.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-poker-room
  namespace: web-poker
spec:
  selector:
    app: web-poker-room
  ports:
    - name: websocket
      port: 8081
      targetPort: 8081
      protocol: TCP
  type: ClusterIP
